--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
+    "reactstrap": "^9.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
